erDiagram
    users ||--o{ login_sessions : "signs in"
    users ||--o{ accounts : "owns (customers only)"
    users ||--o{ loans : applies
    users ||--o{ action_otps : "pending actions"
    users ||--o{ notifications : receives
    users ||--o{ audit_log : "acts (nullable)"
    users ||--o{ loan_approvals : approves
    users ||--o{ transfer_reviews : decides
    accounts ||--o{ limit_changes : "limit history"
    accounts ||--o{ adjustment_requests : "dual-control edits"
    accounts ||--o{ transfers : "from / to"
    accounts ||--o{ repayments : "funds (nullable)"
    accounts ||--o{ loans : "disbursement (nullable)"
    transfers ||--o| transfer_reviews : "review request"
    loans ||--o{ loan_approvals : "dual control"
    loans ||--o{ repayments : "payment ledger"

    users {
        bigserial id PK
        text email UK
        text password_hash
        text full_name
        text first_name
        text middle_name
        text last_name
        text nric "customers only"
        user_role role
        bigint telegram_chat_id
        text telegram_link_code UK
        timestamptz last_activity_at
    }
    login_sessions {
        bigserial id PK
        bigint user_id FK
        text browser "Chrome Safari Firefox Edge Other"
        text ip
        boolean is_new_device "first-seen browser"
        boolean is_new_network "first-seen IP"
    }
    accounts {
        bigserial id PK
        bigint user_id FK
        text account_number UK
        account_type kind
        account_status status
        numeric balance "CHECK >= 0"
        numeric transfer_limit
        int limit_hold_seconds "43200 default"
    }
    limit_changes {
        bigserial id PK
        bigint account_id FK
        numeric old_limit
        numeric new_limit
        timestamptz effective_at
        timestamptz applied_at
    }
    transfers {
        bigserial id PK
        bigint from_account_id FK
        bigint to_account_id FK
        numeric amount "CHECK > 0"
        transfer_status status
        text status_reason
        text otp_hash "argon2"
        int otp_attempts "3 strikes"
    }
    transfer_reviews {
        bigserial id PK
        bigint transfer_id FK "UNIQUE"
        text purpose
        text nric_claimed
        bigint decided_by FK
        text decision "released | denied"
    }
    loans {
        bigserial id PK
        bigint user_id FK
        numeric principal
        numeric interest_rate
        int term_months
        loan_status status
        bigint disbursement_account_id FK
        timestamptz next_payment_due "advances monthly"
    }
    adjustment_requests {
        bigserial id PK
        bigint account_id FK
        numeric delta "over 1000 parks here"
        bigint requested_by FK
        user_role requested_role
        bigint approved_by FK "must be the other role"
        timestamptz approved_at
    }
    loan_approvals {
        bigserial id PK
        bigint loan_id FK
        bigint approver_user_id FK
        user_role role "UNIQUE(loan_id, role)"
    }
    repayments {
        bigserial id PK
        bigint loan_id FK
        numeric amount "CHECK > 0"
        bigint account_id FK
    }
    action_otps {
        bigserial id PK
        bigint user_id FK
        text purpose
        jsonb payload
        text otp_hash "argon2"
        timestamptz consumed_at "single use"
    }
    audit_log {
        bigserial id PK
        bigint actor_user_id FK "nullable"
        text event
        jsonb payload
    }
    notifications {
        bigserial id PK
        bigint user_id FK
        text message
        timestamptz seen_at
    }
